[project]
name = "rl-david-silver-2015"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heng", email = "31088159+shiukaheng@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
]

[project.scripts]
rl-david-silver-2015 = "rl_david_silver_2015:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
